Added contact section. Changes in design

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,3 +13,11 @@
     @apply scroll-smooth;
   }
 }
+
+@layer components {
+  :root {
+    --swiper-pagination-color: #fff;
+    --swiper-pagination-bullet-inactive-color: rgb(109, 108, 110);
+    --swiper-pagination-bullet-inactive-opacity: 1;
+  }
+}
